# stage-the-2nd-lab

./: .coverage  .env.cloud.template  .env.example  .gitignore  Demarrer_The_Sovereign.bat  Guide_Utilisation.md  app.py  evaluate_retrieval.py  main.py  pyproject.toml  pytest.ini  reindex.py  requirements.txt  run_phase1_ingestion.py
scripts/: build_handover_bundle.py  build_release_readiness.py  build_soutenance_dryrun.py  build_soutenance_pack.py  build_soutenance_qa.py  eval_d3.py  eval_d3_ablation.py  eval_d3_stability.py  eval_d6_calibration.py  install_env.bat  install_env.ps1  pre_soutenance_check.py  preflight.py  read_env_vars.ps1  test_d1.bat  test_d1.ps1  test_d3.bat  test_d3.ps1  test_d4_ablation.bat  test_d4_ablation.ps1  test_d5_stability.bat  test_d5_stability.ps1  test_d6_calibration.bat  test_d6_calibration.ps1  test_e1_pack.bat  test_e1_pack.ps1  test_e2_checklist.bat  test_e2_checklist.ps1  test_e3_dryrun.bat  test_e3_dryrun.ps1  test_e4_qa.bat  test_e4_qa.ps1  test_e5_bundle.bat  test_e5_bundle.ps1  test_e6_release.bat  test_e6_release.ps1
tests/: test_phase3bridge.py  test_phase4_psychometric.py  test_phase4b_rhetoric.py  test_phase4c_logistics.py  test_phase5_global.py  test_phase5_scorer.py  test_rhetoric_audit.py  test_single_candidate.py
tests_d1/: test_e5_handover_bundle.py  test_e6_release_readiness.py  test_eval_d3_metrics.py  test_eval_d4_ablation.py  test_eval_d5_stability.py  test_eval_d6_calibration.py  test_global_scorer_modes.py  test_pii_guard_fallback.py  test_pre_soutenance_check.py  test_soutenance_dryrun.py  test_soutenance_qa.py  (+2 more)
(+127 files in other folders)
