[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pydantic = "^2.6.0"
docling = "^1.0.0"  # IBM Vision-Language Parser
presidio-analyzer = "^2.2.351"
presidio-anonymizer = "^2.2.351"
langdetect = "^1.0.9"
spacy = "^3.7.2"

# Post-install: python -m spacy download en_core_web_lg